<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".UpdateCard">

<!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="view.xml" />-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_detail"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:gravity="center"
        android:fontFamily="sans-serif"/>

    <EditText
        android:id="@+id/create_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:background="@drawable/custom_edittetext"
        android:textColorHint="#BFBBBB"
        android:textColor="@color/white"
        />

    <Spinner
        android:id="@+id/create_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edittetext"
        android:padding="15dp"
        android:entries="@array/priority_array"
        />


    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">
        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/update"/>

        <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF5722"
            android:text="@string/delete"/>
    </LinearLayout>

</LinearLayout>