<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    tools:context=".CreateCard">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:gravity="center"
        android:fontFamily="sans-serif"/>
    <EditText
        android:id="@+id/create_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_title"
        android:layout_marginTop="30dp"
        android:padding="15dp"
        android:background="@drawable/custom_edittetext"
        android:textColorHint="#BFBBBB"
        android:textColor="@color/white"
        />

    <Spinner
        android:id="@+id/create_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edittetext"
        android:padding="15dp"
        android:entries="@array/priority_array"
        />

    <Button
        android:id="@+id/save_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/save"/>

</LinearLayout>